# ChangeLog for sys-fs/squashmount
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*squashmount-7.0 (04 Jul 2014)

  04 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump to support current overlayfs.
  WARNING: standard_mount changed! You likely have to modify your dir layout!

*squashmount-6.3 (09 Jun 2014)

  09 Jun 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. New $mksquash_verbose/--mksquash-verbose
  replaces now obsolete $squash_verbose/--mksquash-verbose

*squashmount-6.1 (08 Jun 2014)

  08 Jun 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-6.0a (21 May 2014)

  21 May 2014; Martin Väth <martin@mvath.de>:
  Version bump to revert to COMPRESSION=xz default. Mask old by keyword.

*squashmount-6.0 (17 May 2014)

  17 May 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-5.0 (05 May 2014)

  05 May 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-4.5 (30 Mar 2014)

  30 Mar 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-4.4 (22 Mar 2014)

  22 Mar 2014; Martin Väth <martin@mvath.de>:
  Add sanity check before deleting DIR after first creation of squashfile

*squashmount-4.3 (09 Mar 2014)

  15 Mar 2014; Martin Väth <martin@mvath.de>:
  Use optfeature

  09 Mar 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-4.2 (21 Jan 2014)

  24 Jan 2014; Martin Väth <martin@mvath.de>:
  Avoid duplicate installation

  21 Jan 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-4.1 (03 Dec 2013)

  03 Dec 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support $killpower (/etc/killpower)

*squashmount-4.0-r1 (17 Dec 2013)

  17 Dec 2013; Martin Väth <martin@mvath.de>:
  Fix perl path

*squashmount-4.0 (24 Nov 2013)

  24 Nov 2013; Martin Väth <martin@mvath.de>: