@@ -1,2 +1,2 @@
 DIST squashmount-6.3.tar.gz 42059 SHA256 09699ad6355e39e694e2e95c1074a111a428e2615f5c21c6f0d1942825a5d188 SHA512 c1ffe71abc43b10fde4ac9a66a7518bf3450b6257a59b167f0eabf4f82ba32b82a737099ff0b050ad838ae06ddcefc968c08ab9923b8c89fe579c1492974ebf3 WHIRLPOOL 69c94ff4ee0e1161f59618f58b37fd004495adeedd7ba107c6fdc1318fc13e60e5fadbf44db4a5e06482e708cba648da4e24ec726c7cfb70bdf4e33f914c9464
-DIST squashmount-7.0.tar.gz 43077 SHA256 f36e8fcbca9288386953d46e5540ad6b76ec65c002370ede51492fb0e7ee52d4 SHA512 36a13c94324c700e25c8fdca2a7ab4e33efd312ef4224241224ac72d9393fdc7104d1818690ec4204e326135d82c398dac57322babbc5233f9d76786d784cf55 WHIRLPOOL 7e11c7db02e1f92a6b02851bf438f2b39f2111df674c6bb556eaab2e7db281c4913b013b558200df05d1e2f1f072956a2e5dd4fff9a40c461bc8a81b65aefa1e
+DIST squashmount-7.1.tar.gz 43470 SHA256 6be80976c85438b0a6da26110b91376f296cad1381a85f764ea908767d732145 SHA512 778ebcdc06d2785147dbeded201aae728c189b6abb635fb2d99701692216417b435bdd1ae074a3fe9d1dfe1f04e71f717e5f9f8ba53f193c8162c761a2e66096 WHIRLPOOL 4b2fa74d14ed443c162895d2b7831c744088dec9ba8070d340cd7c27a7b470d201b73c7ef16cc1243585536c185aa8179530cdb1a06d193a0b76dd1849c7efb1
