@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashmount-7.1 (05 Jul 2014)
+
+  05 Jul 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild.
+
 *squashmount-7.0 (04 Jul 2014)
 
   04 Jul 2014; Martin Väth <martin@mvath.de>:
